Fixed/ num of comment in the card is not showing when creating new card

--- a/bug-tracker/src/Components/Board/Board.css
+++ b/bug-tracker/src/Components/Board/Board.css
@@ -134,7 +134,8 @@
 .board-list-content{
     position: relative;
     flex: 1 1 auto;
-    margin: 4px 4px;
+    margin: 4px;
+    margin-left: 10px;
     min-height: 0;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -161,6 +162,7 @@
     background-color: #f9f8f6;
     color: #323743;
     border-bottom: 4px solid #323743;
+    padding: 3px;
 }
 
 .board-list-card-create{
@@ -170,7 +172,7 @@
     cursor: pointer;
     display: block;
 
-    margin: 8px 0px 2px 9px;
+    margin: 8px 16px 2px 14px;
     max-width: 295px;
 
     position: relative;
@@ -188,7 +190,7 @@
 
 .board-list-card-create textarea{
     font-size: 18px;
-    width: 290px;
+    width: 280px;
 
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -199,6 +201,8 @@
 
     border: none;
     outline: 0;
+
+    background-color: #f9f8f6;
 }
 
 .board-list-card-create button{
